--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                       <a href="#tech-section"><i class="fas fa-cogs"></i>&nbsp
                         Tech Skill</a>
                       <a href="#software-section"><i class="fas fa-laptop-code"></i>&nbsp Software Skill</a>
-                      <a href=""><i class="fas fa-certificate"></i>&nbsp Certificates</a>
-                      <a href="#" class="underline"><i class="fas fa-briefcase"></i>&nbsp Portfolio</a>
+                      <a href="#certs-section"><i class="fas fa-certificate"></i>&nbsp Certificates</a>
+                      <a href="#portfolio-section" class="underline"><i class="fas fa-briefcase"></i>&nbsp Portfolio</a>
                     </div>
                   </div>
                 </div>
@@ -111,31 +111,8 @@
           <!-- <i class="fas fa-cogs"></i>
           <i class="fas fa-comments"></i>
           <i class="fas fa-certificate"></i>
-          <i class="fas fa-images"></i> -->
-          <!-- <div class="hidden-social-flag">
-            <ul class="social-icons">
-              <li>
-                <a href="https://www.facebook.com/yourpage"
-                  ><i class="fab fa-facebook"> </i
-                ></a>
-              </li>
-              <li>
-                <a href="https://twitter.com/yourusername"
-                  ><i class="fab fa-twitter"> </i
-                ></a>
-              </li>
-              <li>
-                <a href="https://www.instagram.com/yourusername"
-                  ><i class="fab fa-instagram"> </i
-                ></a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/yourprofile"
-                  ><i class="fab fa-linkedin"> </i
-                ></a>
-              </li>
-            </ul>
-          </div> -->
+          <i class="fas fa-images"></i> 
+           <div class="hidden-social-flag">-->
         </div>
         <div class="hero-section">
           <div class="hero">
